# CPPCU_TEST

./: README.md
CPPCU_TEST_ALL/: All.h  CMakeLists.txt  main.cpp
CPPCU_TEST_ALL/data/: parameters.txt
CPPCU_TEST_ALL/include/: baseTOOL.h
CPPCU_TEST_ALL/include/0_CU/: cu0_CUDA.cuh  cu1_init.cuh  cu2_addSum.cuh  cu3_calcTime.cuh
CPPCU_TEST_ALL/src/: baseTOOL.cpp
CPPCU_TEST_ALL/src/0_CU/: cu1_init.cu  cu2_addSum.cu  cu3_calcTime.cu
